Fix '#view-on-dash-forward'
Fix next page button appearing behind other(invisible) elements. Forces '#view-on-dash-forward' to appear in front of other elements.

--- a/Extensions/view_on_dash.css
+++ b/Extensions/view_on_dash.css
@@ -16,7 +16,7 @@
 	margin-left: 260px;
 	opacity: 0.65;
 	cursor: pointer; 
-	
+	z-index:1;
 }
 
 #view-on-dash-back {
